services.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-maven
  namespace: default
spec:
  selector:
    app: springboot-maven
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
